--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:ui": "rm -rf build && cd ../notes && npm run build --prod && cp -r build ../backend/",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
   "author": "GreenVan",
   "license": "MIT",
   "dependencies": {
-    "cross-env": "^7.0.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -33,6 +33,7 @@
     "sinon": "^11.1.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
